--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,8 @@
   background-color: #0c4370;
   padding: 60px 25px 25px 25px;
   border-radius: 25px;
+  width: 650px;
+  margin: 0 auto;
 }
 
 .buttons {
@@ -34,9 +36,11 @@
   margin-top: 50px;
   background-color: #000000;
   color: #ffffff;
-  padding: 25px;
+  padding: 45px;
   border: 2px solid #000000;
-  font-size: 24px;
+  font-size: 35px;
   text-align: right;
   border-radius: 25px;
+  width: auto; /* Definir largura fixa */
+  height: 10px; /* Definir altura fixa */
 }
